# pdf_to_docx_fitz

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/routes/: convert.py
app/services/: converter.py
app/utils/: file_cleanup.py
src/pdf_to_docx_fitz/: __init__.py
